@@ -1,6 +1,5 @@
 package utility;
 
-
 public class Utility {
 	public static Byte getByte(char[] buffer, int offset) {
 		return new Byte((byte) buffer[offset]);
@@ -10,12 +9,12 @@ public class Utility {
 		int size = Short.SIZE / 8;
 		Short result = new Short((short) 0);
 		for (int i = 0; i < size; i++) 
-			result = new Integer(result | new Integer(buffer[i] << (8 * i)).shortValue()).shortValue();
+			result = Integer.valueOf(result | Integer.valueOf(buffer[i] << (8 * i)).shortValue()).shortValue();
 		return result;
 	}
 
 	public static Integer getInt(char[] buffer, int offset) {
-		Integer result = new Integer((int) 0);
+		Integer result = 0;
 		int size = Integer.SIZE / 8;
 		for (int i = 0; i < size; i++) 
 			result = (result << 8) | buffer[offset + i];
@@ -23,7 +22,7 @@ public class Utility {
 	}
 
 	public static Long getLong(char[] buffer, int offset) {
-		Long result = new Long((long)0);
+		Long result = Integer.valueOf(0).longValue();
 		int size = Long.SIZE / 8;
 		for (int i = 0; i < size; i++) 
 			result = (result << 8) | buffer[offset + i];
